[package]
name = "rcmlrs"
version = "0.1.0"
edition = "2021"
authors = ["Hadrian Lazic"]
license = "MIT"

[dependencies]

[workspace]
members = [
    "packages/cli",
    "packages/neuralnet-impls",
    "packages/shared",
    "packages/tensor-impls",
    "storage-op",
    "tensor-impls",
    "tensor-std-op",
    "wasm-features",

]
# TODO removal of main src

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
