[package]
name = "rcmlrs"
version = "0.1.0"
edition = "2021"
authors = ["Hadrian Lazic"]
license = "MIT"

[workspace]
members = [
    "packages/cli",
    "packages/neuralnet-impls",
    "packages/shared",
    "packages/tensor-impls",
    "storage-op",
    "tensor-impls",
    "tensor-std-op",
    "wasm-features",
]

[dependencies]
cli = { path = "packages/cli", optional = true }
neuralnet-impls = { path = "packages/neuralnet-impls" }
shared = { path = "packages/shared" }
tensor-impls = { path = "packages/tensor-impls" }
storage-op = { path = "storage-op" }
tensor-std-op = { path = "tensor-std-op" }
wasm-features = { path = "wasm-features", optional = true }

[features]
default = []
cli = ["dep:cli"]
wasm = ["dep:wasm-features"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
